--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="destino-image">
-                    <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Zacatlán">
+                    <img src="imagenes/Zacatlan foto.png" alt="Zacatlán">
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
             
             <div class="destino-content">
                 <div class="destino-image">
-                    <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Chignahuapan">
+                    <img src="imagenes/chignahuapan-esferas.jpg" alt="Chignahuapan">
                 </div>
                 <div class="destino-text">
                     <h3>El Paraíso de las Esferas</h3>
