Change image URLs for tourist locations
Updated image sources for tourist attractions in Zacatlán and Chignahuapan.

--- a/lugares.html
+++ b/lugares.html
@@ -36,7 +36,7 @@
                 
                 <div class="lugares-grid">
                     <div class="lugar-card">
-                        <div class="lugar-img" style="background-image: url('https://images.unsplash.com/photo-1544551763-46a013bb70d5?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="lugar-img" style="background-image: url('imagenes_turisticos/reloj_floral_zaca.jpg');"></div>
                         <div class="lugar-info">
                             <h3>Reloj Floral Monumental</h3>
                             <p class="lugar-desc">Único en Latinoamérica con carátula de flores naturales. Funciona desde 1984.</p>
@@ -50,7 +50,7 @@
                     </div>
 
                     <div class="lugar-card">
-                        <div class="lugar-img" style="background-image: url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="lugar-img" style="background-image: url('imagenes_turisticos/Barranca-de-los-Jilgueros-en-Puebla_zaca.jpg');"></div>
                         <div class="lugar-info">
                             <h3>Barranca de los Jilgueros</h3>
                             <p class="lugar-desc">Mirador natural con vistas espectaculares de la sierra y cascadas.</p>
@@ -64,7 +64,7 @@
                     </div>
 
                     <div class="lugar-card">
-                        <div class="lugar-img" style="background-image: url('https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="lugar-img" style="background-image: url('imagenes_turisticos/Fábrica de Relojes_Centenario.jpg');"></div>
                         <div class="lugar-info">
                             <h3>Fábrica de Relojes "Centenario"</h3>
                             <p class="lugar-desc">Museo y taller donde se fabrican los relojes monumentales de Zacatlán.</p>
@@ -85,7 +85,7 @@
                 
                 <div class="lugares-grid">
                     <div class="lugar-card">
-                        <div class="lugar-img" style="background-image: url('https://images.unsplash.com/photo-1578662996442-48f60103fc96?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="lugar-img" style="background-image: url('imagenes_turisticos/laguna_de_chignahuapan.jpg');"></div>
                         <div class="lugar-info">
                             <h3>Laguna de Chignahuapan</h3>
                             <p class="lugar-desc">Hermosa laguna en el centro del pueblo, ideal para paseos en lancha.</p>
@@ -99,7 +99,7 @@
                     </div>
 
                     <div class="lugar-card">
-                        <div class="lugar-img" style="background-image: url('https://images.unsplash.com/photo-1544025162-d76694265947?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="lugar-img" style="background-image: url('imagenes_turisticos/Basilica-de-la-Inmaculada-concepcion_chignahuapan.jpg');"></div>
                         <div class="lugar-info">
                             <h3>Basílica de la Inmaculada Concepción</h3>
                             <p class="lugar-desc">Alberga la imagen de la Virgen más grande de Latinoamérica (12 metros).</p>
@@ -113,7 +113,7 @@
                     </div>
 
                     <div class="lugar-card">
-                        <div class="lugar-img" style="background-image: url('https://images.unsplash.com/photo-1513475382585-d06e58bcb0e0?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="lugar-img" style="background-image: url('imagenes_turisticos/esferas_chignahuapan.jpg');"></div>
                         <div class="lugar-info">
                             <h3>Fábricas de Esferas Navideñas</h3>
                             <p class="lugar-desc">Más de 200 talleres familiares donde se producen millones de esferas anuales.</p>
