--- a/hotel.html
+++ b/hotel.html
@@ -35,9 +35,9 @@
                 <h3><i class="fas fa-map-marker-alt"></i> Hoteles en Zacatlán</h3>
                 <div class="hoteles-grid">
                     <div class="hotel-card">
-                        <div class="hotel-img" style="background-image: url('https://images.unsplash.com/photo-1566073771259-6a8506099945?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="hotel-img" style="background-image: url('imagenes_hoteles/image-zacatlan-hotel_vista-zacatlan.jpg');"></div>
                         <div class="hotel-info">
-                            <h4>Hotel Boutique La Posada</h4>
+                            <h4>Vista Zacatlán Hotel</h4>
                             <p class="hotel-desc">Hotel colonial con vista a la barranca. Wi-Fi gratis, restaurante y estacionamiento.</p>
                             <div class="hotel-features">
                                 <span><i class="fas fa-wifi"></i> Wi-Fi</span>
@@ -46,16 +46,16 @@
                             </div>
                             <div class="hotel-price">
                                 <span class="price">$1,200 MXN/noche</span>
-                                <span class="rating"><i class="fas fa-star"></i> 4.5</span>
+                                <span class="rating"><i class="fas fa-star"></i> 4.8</span>
                             </div>
                             <button class="btn-reservar">Consultar Disponibilidad</button>
                         </div>
                     </div>
 
                     <div class="hotel-card">
-                        <div class="hotel-img" style="background-image: url('https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="hotel-img" style="background-image: url('imagenes_hoteles/Cabañas_Ticomulco_Zacatlan.jpg');"></div>
                         <div class="hotel-info">
-                            <h4>Cabañas del Bosque</h4>
+                            <h4>Cabañas Ticomulco</h4>
                             <p class="hotel-desc">Cabañas rústicas con chimenea, ideal para familias y escapadas románticas.</p>
                             <div class="hotel-features">
                                 <span><i class="fas fa-fire"></i> Chimenea</span>
@@ -64,7 +64,7 @@
                             </div>
                             <div class="hotel-price">
                                 <span class="price">$1,800 MXN/noche</span>
-                                <span class="rating"><i class="fas fa-star"></i> 4.8</span>
+                                <span class="rating"><i class="fas fa-star"></i> 4.4</span>
                             </div>
                             <button class="btn-reservar">Consultar Disponibilidad</button>
                         </div>
@@ -77,9 +77,9 @@
                 <h3><i class="fas fa-map-marker-alt"></i> Hoteles en Chignahuapan</h3>
                 <div class="hoteles-grid">
                     <div class="hotel-card">
-                        <div class="hotel-img" style="background-image: url('https://images.unsplash.com/photo-1584132967334-10e028bd69f7?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="hotel-img" style="background-image: url('imagenes_hoteles/Hotel y Aguas Termales de Chignahuapan.jpg');"></div>
                         <div class="hotel-info">
-                            <h4>Hotel Termal San Juan</h4>
+                            <h4>Hotel y Aguas Termales de Chignahuapan</h4>
                             <p class="hotel-desc">Aguas termales incluidas, spa y masajes. Frente a la laguna.</p>
                             <div class="hotel-features">
                                 <span><i class="fas fa-water"></i> Termas</span>
@@ -88,17 +88,17 @@
                             </div>
                             <div class="hotel-price">
                                 <span class="price">$1,500 MXN/noche</span>
-                                <span class="rating"><i class="fas fa-star"></i> 4.6</span>
+                                <span class="rating"><i class="fas fa-star"></i> 5</span>
                             </div>
                             <button class="btn-reservar">Consultar Disponibilidad</button>
                         </div>
                     </div>
 
                     <div class="hotel-card">
-                        <div class="hotel-img" style="background-image: url('https://images.unsplash.com/photo-1571896349842-33c89424de2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');"></div>
+                        <div class="hotel-img" style="background-image: url('imagenes_hoteles/Hotel Osalle Inn_chignahuapan.jpg');"></div>
                         <div class="hotel-info">
-                            <h4>Posada Las Esferas</h4>
-                            <p class="hotel-desc">Hotel familiar con decoración navideña todo el año. Talleres de esferas.</p>
+                            <h4>Hotel Osalle Inn</h4>
+                            <p class="hotel-desc">Hotel familiar, las habitaciones tienen armario, una terraza con vistas a la ciudad.</p>
                             <div class="hotel-features">
                                 <span><i class="fas fa-tree"></i> Decoración</span>
                                 <span><i class="fas fa-gift"></i> Talleres</span>
@@ -106,7 +106,7 @@
                             </div>
                             <div class="hotel-price">
                                 <span class="price">$900 MXN/noche</span>
-                                <span class="rating"><i class="fas fa-star"></i> 4.3</span>
+                                <span class="rating"><i class="fas fa-star"></i> 5</span>
                             </div>
                             <button class="btn-reservar">Consultar Disponibilidad</button>
                         </div>
